change links to the new html manuals / documentation

--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
 
                         <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="doc-menu-lower">
                             <li class="mdl-menu__item">
-                                <a href="documentation/pdf/Knora.pdf" target="_blank" class="center">
+                                <a href="http://knora.org/documentation/manual/rst/" class="center">
                                     Knora documentation
                                 </a>
                             </li>
                             <li class="mdl-menu__item">
-                                <a href="documentation/pdf/knora-base.pdf" target="_blank" class="center">
-                                    Knora Base Ontology
+                                <a href="http://knora.org/documentation/api/" class="center">
+                                    Knora API format documentation
                                 </a>
                             </li>
                         </ul>
