docs: knora.org fixed small issues in the header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset='utf-8'>
         <title>KNORA | Knowledge Organization, Representation and Annotation</title>
         <link rel='shortcut icon' href='favicon.ico'>
-        <meta name='description' content='KNORA is an awsome platform for creating Knowledge Organization, Representation and Annotation applications. Created by the Digital Humanities lab (dhlab), University of Basel'>
+        <meta name='description' content='Knora (Knowledge Organization, Representation, and Annotation) is a software framework for storing, sharing, and working with primary sources and data in the humanities.. Created by the Digital Humanities Lab (DHLab Basel), University of Basel.'>
         <meta name='keywords' content='knora, knowledge, organization, representation, annotation, dhlab, digital, humanities, basel, switzerland'>
 
         <meta name='viewport' content='width=480, user-scalable=no'>
@@ -16,12 +16,7 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
         <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.blue_grey-indigo.min.css">
         <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-        <!-- quick hack to work offline (by milchkannen) -->
-        <!--
-        <link rel="stylesheet" href="_mdl-offline/material.icons.css">
-        <link rel="stylesheet" href="_mdl-offline/material.blue_grey-indigo.min.css">
-        <script src="_mdl-offline/material.min.js"></script>
--->
+
         <style>
             @import url(http://fonts.googleapis.com/css?family=Raleway);
             * {
